# viz-tool

./: AGENTS.md  Dockerfile  compose.yaml  pyproject.toml
src/: __init__.py  cli.py  engine.py  web.py
src/graphs/: __init__.py  factory.py  plotly_renderer.py  protocol.py  types.py
