[project]
name = "viz-tool"
version = "0.1.0"
description = "High-performance data visualization tool"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "streamlit>=1.37.0",
    "plotly>=5.18.0",
    "networkx>=3.2",
    "kaleido>=0.2.1",
]

[tool.uv]
dev-dependencies = ["pytest", "ruff"]

